[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Textures/UI/CompassBar.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/UI/PowerMeter.png" type="Texture" id=2]
[ext_resource path="res://UI/HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/consola.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Textures/UI/DamageMeter.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 27
outline_size = 2
use_filter = true
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="PowerMeter" type="Sprite" parent="."]
position = Vector2( 10, 10 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 165, 21 )

[node name="PowerMeterFill" type="Sprite" parent="PowerMeter"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 21, 165, 21 )

[node name="DamageMeter" type="Sprite" parent="."]
position = Vector2( 10, 41 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 165, 21 )

[node name="DamageMeterFill" type="Sprite" parent="DamageMeter"]
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 21, 165, 21 )

[node name="CheckpointCounterLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 38.0
grow_horizontal = 0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 47.0

[node name="CompassBar" type="Sprite" parent="CenterContainer"]
position = Vector2( 512, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -45, -10 )
region_enabled = true
region_rect = Rect2( -39.5, 0, 90, 20 )
